@startuml RTC_Classes
title Diagramme de Classes - Hello World RTC

skinparam classAttributeIconSize 0
skinparam backgroundColor #1a1a1a
skinparam class {
  BackgroundColor #2d2d2d
  BorderColor #4FDFFF
  FontColor #ffffff
  AttributeFontColor #cccccc
}
skinparam enum {
  BackgroundColor #3d3d3d
  BorderColor #FF3333
  FontColor #ffffff
}
skinparam arrow {
  Color #4FDFFF
}
hide empty methods

package "PostgreSQL" {
  enum UserStatus {
    Online
    Offline
    Dnd
    Invisible
  }

  enum MemberRole {
    owner
    admin
    member
  }

  class User {
    - id: UUID
    - email: String
    - password_hash: String
    - username: String
    - avatar_url: String?
    - status: UserStatus
    - created_at: DateTime
  }

  class Server {
    - id: UUID
    - name: String
    - owner_id: UUID
    - created_at: DateTime
    - updated_at: DateTime
  }

  class ServerMember {
    - server_id: UUID
    - user_id: UUID
    - role: MemberRole
    - joined_at: DateTime
  }

  class ServerBan {
    - server_id: UUID
    - user_id: UUID
    - banned_by: UUID
    - reason: String?
    - expires_at: DateTime?
    - banned_at: DateTime
  }

  class Channel {
    - id: UUID
    - server_id: UUID
    - name: String
    - position: Int
    - created_at: DateTime
    - updated_at: DateTime
  }

  class Invite {
    - id: UUID
    - server_id: UUID
    - code: String
    - created_by: UUID
    - expires_at: DateTime?
    - max_uses: Int?
    - uses: Int
    - revoked: Boolean
    - created_at: DateTime
  }

  class DirectMessage {
    - id: UUID
    - user1_id: UUID
    - user2_id: UUID
    - created_at: DateTime
  }

  class Friendship {
    - user1_id: UUID
    - user2_id: UUID
    - created_at: DateTime
  }

  class Attachment {
    - id: UUID
    - sender_id: UUID
    - filename: String
    - file_path: String
    - content_type: String?
    - file_size: Long?
    - created_at: DateTime
  }
}

package "MongoDB" {
  class MessageReaction {
    - user_id: UUID
    - emoji: String
    - created_at: DateTime
  }

  class ChannelMessage {
    - message_id: UUID
    - server_id: UUID
    - channel_id: UUID
    - author_id: UUID
    - content: String
    - reactions: List<MessageReaction>
    - created_at: DateTime
    - edited_at: DateTime?
    - deleted_at: DateTime?
    - deleted_by: UUID?
  }

  class DirectMessageItem {
    - message_id: UUID
    - dm_id: UUID
    - author_id: UUID
    - content: String
    - reactions: List<MessageReaction>
    - created_at: DateTime
    - edited_at: DateTime?
    - deleted_at: DateTime?
  }
}

' ====== RELATIONS ======
User "1" <-- "0..*" Server : owner_id
User "1" <-- "0..*" ServerMember
Server "1" <-- "0..*" ServerMember
Server "1" <-- "1..*" ServerBan
User "1" <-- "1..*" ServerBan : target
Server "1" <-- "1..*" Channel
Server "1" <-- "1..*" Invite
User "1" <-- "1..*" Invite : created_by
Channel "1" <-- "0..*" ChannelMessage
Server "1" <-- "0..*" ChannelMessage
User "1" <-- "0..*" ChannelMessage : author_id

User "1" <-- "0..*" DirectMessage : user1
User "1" <-- "0..*" DirectMessage : user2
DirectMessage "1" <-- "0..*" DirectMessageItem
User "1" <-- "0..*" DirectMessageItem : author
User "1" <-- "2" Friendship : participant
User "1" <-- "0..*" Attachment : sender
@enduml
